<resources>
    <string name="app_name">眼保宝</string>

    <string name="my">我的</string>

    <string name="name">xxxxx</string>

    <string name="age">年龄：</string>

    <string name="my_vison">我的视力</string>

    <string name="my_device">我的设备</string>

    <string name="data_set">参数设置</string>

    <string name="follow">关注眼专家</string>

    <string name="exit">退出当前账户</string>

    <string name="being_bound">正在绑定...</string>

    <string name="being_success">绑定成功</string>

    <string name="being_fail">绑定失败</string>

    <string name="binding_hint_1">绑定过程请打开手机蓝牙</string>

    <string name="binding_hint_2">保持手机与智能硬件小于1米</string>

    <string name="device_list">设备列表</string>

    <string name="binding_hint_3">绑定后，下次默认连接该设备。</string>

    <string name="binding_state_no">未绑定</string>

    <string name="binding_state_yes">已绑定</string>

    <string name="binding_device">绑定设备</string>

    <string name="auto_conn">自动连接设备</string>

    <string name="edit_data">编辑资料</string>

    <string name="user_name">用户名</string>

    <string name="left_eye_degree">左眼度数</string>

    <string name="right_eye_degree">右眼度数</string>

    <string name="left_eye_astigmatism">左眼散光</string>

    <string name="right_eye_astigmatism">右眼散光</string>

    <string name="eye_pupil">两眼瞳距</string>

    <string name="update_bill">不知道？上传验光单</string>

    <string name="photo_bill">照片/验光单</string>

    <string name="eye_hint">请输入度数</string>

    <string name="man">男</string>

    <string name="girl">女</string>

    <string name="head">头像</string>

    <string name="nick_name">昵称</string>

    <string name="sex">性别</string>

    <string name="age_1">年龄</string>

    <string name="both">生日</string>

    <string name="no_set">未设置</string>

    <string name="second_1">1s</string>
    <string name="second_2">2s</string>
    <string name="second_3">3s</string>
    <string name="second_4">4s</string>
    <string name="second_5">5s</string>
    <string name="second_6">6s</string>
    <string name="second_7">7s</string>
    <string name="second_8">8s</string>
    <string name="second_9">9s</string>
    <string name="second_10">10s</string>

    <string name="complete">完成</string>

    <string name="sampling">采样频率</string>

    <string name="parameter_set">参数配置</string>

    <string name="set_time">设定系统时间</string>

    <string name="set_ac_time">设定采集时段</string>

    <string name="set_sampling">设定采集频率</string>

    <string name="set_posture">设定前倾提醒</string>

    <string name="set_shaking_num">设定振动次数</string>

    <string name="set_shaking_delayed">设定振动延时</string>

    <string name="go_set">去设置</string>

    <string name="shaking_1">振动1次</string>

    <string name="shaking_2">振动2次</string>

    <string name="shaking_3">振动3次</string>

    <string name="please_set">请设置</string>

    <string name="start_time">开始时间</string>

    <string name="end_time">结束时间</string>

    <string name="morning">早上</string>

    <string name="night">晚上</string>

    <string name="am">上午</string>

    <string name="pm">下午</string>

    <string name="follow_hint">扫描二维码关注我们吧</string>

    <!--SharedPreferences  配置文件 key-->
    
    <!--自动连接设备开关-->
    <string name="switchView">switchView</string>
    

    <!--<string name="photo_bill">照片/验光单</string>-->

    <!--<string name="photo_bill">照片/验光单</string>-->

    <!--<string name="photo_bill">照片/验光单</string>-->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="border">Border</string>
    <string name="shape">Shape</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="defaultColor">Default</string>


    <string name="paired">paired</string>


</resources>
