<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_color"
              android:orientation="vertical"
    >
    <include layout="@layout/view_title_bar"/>

    <LinearLayout
        android:id="@+id/lin_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_1"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_2"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            android:visibility="gone"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_3"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            android:visibility="gone"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_4"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            android:visibility="gone"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_5"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            android:visibility="gone"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_6"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            android:visibility="gone"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_7"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            android:visibility="gone"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_8"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            android:visibility="gone"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_9"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            android:visibility="gone"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:text="@string/second_10"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="14.8dp"
            android:layout_height="10.6dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/con_cur"
            android:visibility="gone"
            />

    </RelativeLayout>


</LinearLayout>