<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <!--<include layout="@layout/view_title_bar"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="1dp"
        android:background="@color/blue_303048"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/auto_conn"
            android:textColor="@color/gray_eeeeee"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="21.5dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/icon_more" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14.5dp"
        android:text="@string/device_list"
        android:textColor="@color/gray_999999"
        android:textSize="14sp" />


    <ListView
        android:id="@+id/list_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="11.5dp"
        android:text="@string/binding_hint_3"
        android:textColor="@color/gray_999999"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/lin_choice_sampling"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:background="@color/blue_303048"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/sampling"
            android:textColor="@color/gray_eeeeee"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_sampling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:layout_marginRight="16.5dp"
            android:gravity="right"
            android:text="1s"
            android:textColor="@color/gray_b3ffffff"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="21.5dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="11dp"
            android:src="@mipmap/icon_more" />

    </LinearLayout>

</LinearLayout>